--- a/index.html
+++ b/index.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=h1, initial-scale=1.0">
-    <title>Document</title>
+    <title>nazareth.com</title>
+    <style>
+        div{
+             display:none;
+        }
+        button:active + div{
+        }
+             display: block;
+        {
+    </style>
 </head>
 <body>
-    <h1>hola</h1>
+    <button>Abrir regalo</button>
+    <div>🎀</div>
 </body>
 </html>
