Feature: Create post

--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=h1, initial-scale=1.0">
-    <title>nazareth.com</title>
-    <style>
-        div{
-             display:none;
-        }
-        button:active + div{
-        }
-             display: block;
-        {
-    </style>
+    <title>app publicaciones</title>
+   
 </head>
 <body>
-    <button>Abrir regalo</button>
-    <div>🎀</div>
+    <h2>crear formulario</h2>
+    <form class="form-create">
+        <label for="publicacion">contenido</label>
+        <input type="text" name="publicacion" id="publicacion">
+        <input type="submit" value="publicar">
+    </form>
+    <div class="contenedor-publicaciones">
+    <script src="main.js"></script>
+    </div>
+    </div>
 </body>
 </html>
